--- a/utils/modal/modal.css
+++ b/utils/modal/modal.css
@@ -15,8 +15,7 @@
     top: 50%;
     left: 50%;
     transform:translate(-50%,-50%);
-    min-height: 750px;
-    max-height: 750px;
+    min-height: calc(100dvh - var(--spacing-xxl));
     overflow-y: auto;
     overflow: auto;
     background-color: var(--white);
