--- a/utils/modal/modal.css
+++ b/utils/modal/modal.css
@@ -16,6 +16,7 @@
     left: 50%;
     transform:translate(-50%,-50%);
     min-height: calc(100dvh - var(--spacing-xxl));
+    max-height: calc(100dvh - var(--spacing-xxl));
     overflow-y: auto;
     overflow: auto;
     background-color: var(--white);
