Fixed modal sizing on very large screens.

--- a/utils/modal/modal.css
+++ b/utils/modal/modal.css
@@ -59,7 +59,24 @@
     background-color: var(--blue-lightest);
 }
 
-@media (width >= 900px) {
+@media (width >= 1025px) {
+    .modal .modal-container {
+        position: fixed;
+        z-index: 10;
+        top: 50%;
+        left: 50%;
+        transform:translate(-50%,-50%);
+        min-height: 400px;
+        max-height: 80vh;
+        min-width: 600px;
+        max-width: 70vw;
+        overflow-y: auto;
+        overflow: auto;
+        background-color: var(--white);
+        border: 2px solid var(--blue);
+        border-radius: 12px;
+    }
+
     .modal > div {
         display: flex;
         flex-flow: column;
