--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -82,7 +82,6 @@
 .cards .cards-card-badge {
   top: var(--rounding-m);
   left: var(--rounding-m);
-  background-color: aqua;
 }
 
 .cards .cards-card-body :first-child {
@@ -93,19 +92,48 @@
   margin-bottom: 0;
 }
 
+.cards.actionless {
+  border: var(--border-s) solid var(--blue-light);
+  border-radius: var(--rounding-m);
+}
+
+.cards.actionless ul {
+  margin-bottom: 0;
+  padding: var(--horizontal-spacing);
+  gap: unset;
+}
+
+.cards.actionless .cards-card {
+  border: none;
+  border-radius: var(--rounding-m);
+}
+
 @media (width >= 600px) {
   .cards .cards-card-body {
     height: 150px;
     max-height: 150px;
     overflow-y: hidden;
   }
-
+  
   .cards .cards-card-body h3 ~ p:not([class]) {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 4;
     text-overflow: ellipsis;
     overflow: hidden;
+  }
+
+  .cards.actionless ul {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .cards.actionless .cards-card {
+    grid-template-columns: unset;
+  }
+
+  .cards.cards.actionless .cards-card-body {
+    height: 200px;
+    max-height: 200px;
   }
 }
 
