Adding highlight block.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,6 +24,7 @@
   --blue-light: #C1C8FF;
   --blue-lightest: #EDEFFA;
   --primary: var(--blue);
+  --pink: #FFE5E5;
   --pale-pink: #E0CCD5;
   --pale-orange: #E0D1CC;
   --pale-yellow: #E0DFCC;
