--- a/blocks/highlight/highlight.css
+++ b/blocks/highlight/highlight.css
@@ -1,6 +1,6 @@
 .highlight {
     position: relative;
-    border: 4px solid var(--blue);
+    border: var(--border-m) solid var(--blue);
     border-radius: 24px;
     padding: var(--horizontal-spacing);
     margin-bottom: calc(var(--spacing-xxxl) + var(--spacing-xxl));
