--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,7 @@
   --white: #FFFCF3;
   --blue: #0B21E0;
   --red: #FB0619;
+  --green: #1CCE65;
   --red-light: #fceff0;
   --blue-light: #C1C8FF;
   --blue-lightest: #EDEFFA;
