--- a/blocks/promo/promo.css
+++ b/blocks/promo/promo.css
@@ -44,11 +44,17 @@
 .promo > .promo-container > div .icon svg {
     width: 100%;
     height: 250px;
-    padding: var(--horizontal-spacing) 0;
 }
 
-.promo > .promo-container > div:nth-child(1),
-.promo > .promo-container > div:nth-child(1) > div {
+.promo > .promo-container > div:nth-child(1) {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    text-align: center;
+}
+
+.promo.banner > .promo-container > div > div:nth-child(2) {
+    text-align: center;
     display: flex;
     flex-flow: column;
     align-items: center;
@@ -65,7 +71,6 @@
     font-size: var(--heading-size-m);
     line-height: 0;
     min-height: 50px;
-    min-width: 300px;
     cursor: pointer;
     border-radius: 6px;
 }
@@ -109,16 +114,18 @@
         min-width: 60vw;
     }
 
-    .promo.banner > .promo-container > div > div {
+    .promo.banner > .promo-container > div {
         flex-flow: row;
     }
-    
-    .promo.banner > .promo-container > div > div .img-wrapper {
-        min-width: 45%;
+
+    .promo.banner > .promo-container > div > div:nth-child(1) p {
+        width: 35vw;
     }
-    
-    .promo.banner > .promo-container > div > div .banner-content-wrapper {
-        margin-left: 20px;
+
+    .promo.banner > .promo-container > div > div:nth-child(2) {
+        margin-left: var(--horizontal-spacing);
+        text-align: left;
+        align-items: flex-start
     }
 }
 
