--- a/pages/pint-club/pint-club.css
+++ b/pages/pint-club/pint-club.css
@@ -1,19 +1,61 @@
 .pint-club .info-card {
     background-color: var(--blue-lightest);
     border-radius: 12px;
-    padding: var(--spacing-xxl)
+    padding: var(--spacing-xxl);
+    margin: var(--spacing-xl) 0;
 }
 
-.pint-club .divider {
-    height: 1px;
-    margin: 4px 0;
-    background-color: var(--blue);
-}
-
-.pint-club .processing-container {
+.pint-club .info-card .content-container {
     display: flex;
     flex-flow: column;
-    justify-content: center;
     align-items: center;
-    min-height: calc(50dvh - var(--spacing-xxl));
+    text-align: center;
+}
+
+.pint-club .info-card .divider {
+    border-top: 1px solid var(--blue);
+    margin: var(--spacing-xl) 0;
+}
+
+.pint-club .pint-club-styled-content {
+    padding: var(--spacing-s) 0;
+}
+
+.pint-club .subscription-total-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.pint-club .subscription-total-container h5 {
+    font-size: var(--font-size-300);
+}
+
+.pint-club .tax-details {
+    text-align: center;
+    font-size: var(--font-size-50);
+    padding-top: var(--spacing-m);
+}
+
+@media (width >= 600px) {
+
+
+    .pint-club .tax-details {
+        text-align: right;
+    }
+        
+    .pint-club .info-card .total-container {
+        margin: 0 var(--horizontal-spacing);
+    }
+    
+    .pint-club .subscription-total-container {
+        justify-content: flex-end;
+    }
+    
+    .pint-club .subscription-total-container h5 {
+        font-size: var(--heading-size-m);
+    }
+
+    .pint-club .subscription-total-container h5:first-child {
+        margin-right: 30px;
+    }
 }
