Removed Square from wholesale order flow. removed wholesale modal. added form to wholesale table. CSSd somethings.

--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -19,6 +19,7 @@
     width: 100%;
     border-top: 2px solid var(--blue);
     border-bottom: 2px solid var(--blue);
+    margin-top: var(--spacing-xl);
 }
 
 .table table thead th,
